fresh as ever alignment fixed

--- a/dank/aboutus.css
+++ b/dank/aboutus.css
@@ -11,6 +11,7 @@ body {
     display: grid;
     height: 100vh;
     place-items: center;
+    align-items: flex-start;
 
 }
 
@@ -23,14 +24,14 @@ p {
 }
 
 .textarea {
-    width: 45%;
     padding: 12px;
-    margin-top: 30%;
+    /* margin-top: 30%; */
     border-radius: 4px;
     resize: vertical;
+    margin-top: auto;
+    font-family: 'Arial Narrow Bold', 'Sans-serif';
 
 }
-
 h1 {
     font-family: 'KarmaticArcade', 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 35px;
@@ -43,8 +44,8 @@ h1 {
 h1 {
     box-shadow: inset 0 0 0 0 0 #54b3d6;
     color: #54b3d6;
-    padding: 0 .25rem;
-    margin: 0 -.25rem;
+    padding: 0.25rem;
+    margin: 0.25rem;
     transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
 
 }
@@ -71,10 +72,14 @@ h1 {
 }
 
 h2 {
-    font-family: 'Lucida Sans', 'Lucida Grande', 'Lucida Sans Unicode';
+    font-family:  'Lucida Grande', 'Lucida Sans Unicode';
     color: #fff;
     text-shadow: 10px;
+    font-size: 25px;
+    align-items: center;
+    
 }
+
 
 button {
     display: inline-block;
@@ -110,7 +115,9 @@ button::before {
     left: 100%;
     transition: 0.7s;
 }
-
+.bottom:hover> :not(:hover) {
+    opacity: .4;
+}
 button:hover::before {
     top: -30px;
     left: -30px;
@@ -128,21 +135,15 @@ img {
 
 .box-main {
     font: caption;
-    height: 200px;
-    width: 200px;
-    background-color: transparent;
+    height: 100px;
+    width: 100px;
+    background-color: white;
     flex-direction: column;
     justify-content: center;
     margin-left: 37%;
 
 }
 
-.textarea {
-    display: flex;
-    height: fit-content;
-    margin-top: auto;
-    font-family: 'Arial Narrow Bold', 'Sans-serif';
-}
 
 .middle {
     flex-direction: column;
@@ -150,13 +151,6 @@ img {
     margin-right: 20%;
     font-size: 25px;
 }
-
-.text2 {
-    margin-left: 28%;
-    font-size: 25px;
-    align-items: center;
-}
-
 .box1,
 .box2,
 .box3 {
@@ -169,7 +163,7 @@ img {
 }
 
 .box1 {
-    background-color: lightskyblue;
+    background-color: rgba(135, 206, 250, 0.827);
 }
 
 .box2 {
@@ -190,25 +184,28 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgba(0, 0, 0, 0.474);
-    border-radius: 25% 25%;
+    /* background-color: rgba(0, 0, 0, 0.064); */
+    /* border-radius: 25% 25%; */
     height: 300px;
 }
 
-.section {
-    display: block;
+.section3 {
+    display: inline-block;
     flex-direction: column;
     justify-content: center;
     grid-area: auto;
 
 }
-
-.bottom:hover> :not(:hover) {
-    opacity: .4;
+.section3 {
+    min-height: auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-image: url(BGnew.jpg);
+    box-shadow: rgb(50 50 93 / 25%) 0px 30px 60px -12px inset, rgb(0 0 0 / 30%) 0px 18px 36px -18px inset;
 }
-
-.img {
-    animation: flip-horizontal-bottom 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+img{
+    animation-play-state: running 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
 }
 
 @font-face {
@@ -235,23 +232,16 @@ img {
 
 
 /*  */
-@media (max-width: 991.98px) {
-    .section4 {
+/* @media (max-width: 991.98px) {
+    .section{
         min-height: 100vh;
-        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/assets/images/schedule.jpg);
+        background: linear-gradient(rgba(79, 12, 12, 0.5), rgba(0, 0, 0, 0.5)), url(/assets/images/schedule.jpg);
         background-size: cover;
         background-position: center;
     }
-}
+} */
 
-.section3 {
-    min-height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    background: rgba(79, 231, 223, 0.475);
-    box-shadow: rgb(50 50 93 / 25%) 0px 30px 60px -12px inset, rgb(0 0 0 / 30%) 0px 18px 36px -18px inset;
-}
+
 
 * {
     margin: 0;
@@ -260,21 +250,13 @@ img {
     font-family: 'Montserrat';
 }
 
-.section {
-    display: block;
-}
-
-.section4 {
+.box-main {
     min-height: 90vh;
     width: 100%;
     background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/assets/images/schedule.jpg);
     background-size: cover;
     background-position: center;
 }
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Montserrat';
+.bottom{
+    display: flex;
 }
