--- a/dank/contactus.css
+++ b/dank/contactus.css
@@ -142,7 +142,7 @@ span,p{
 a{
     color: aquamarine;
 }
-p{}
+/* p{} */
 @media screen and (max-width: 600px) 
 {
     .background{
